# teste-tech-lead-e-deploy

./: .env.example  .gitignore  .mailmap  Atividade Técnica-2026.docx  README.md  app.py  pyproject.toml
.github/workflows/: run-tests.yml
questoes/ex001_validacao_string/: README.md  test_validacao_string.py  validacao_string.py
questoes/ex002_sequencia_numerica/: README.md  sequencia_numerica.py  test_sequencia_numerica.py
questoes/ex003_jogo_tabuleiro/: README.md  jogo_tabuleiro.py  test_jogo_tabuleiro.py
questoes/ex004_calculo_beneficios/: README.md  calculo_beneficios.py  test_calculo_beneficios.py
scratch/: check_nicegui.py
src/infra/: cache.py  config.py  logger.py  server.py  test_logger.py
src/infra/salario/: client.py
src/uis/: layout.py  validators.py
src/uis/components/: button.py  date_input.py  test_date_input.py
src/uis/pages/calculo_beneficios/: test_beneficios_ui.py  ui.py  validators.py
src/uis/pages/jogo_tabuleiro/: test_tabuleiro_ui.py  ui.py  validators.py
src/uis/pages/sequencia_numerica/: test_sequencia_ui.py  ui.py  validators.py
src/uis/pages/validacao_string/: test_string_ui.py  ui.py  validators.py
